--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,8 @@ dependencies:
   image_picker: ^1.0.6
   http:
   video_player: ^2.7.2
+  apivideo_player: ^1.2.1
+  audio_video_progress_bar: ^2.0.1
 
 dev_dependencies:
   flutter_test:
